--- a/packages/react/src/styles/core.global.scss
+++ b/packages/react/src/styles/core.global.scss
@@ -2,8 +2,8 @@
   --boldui-color-primary: #3366ff;
   --boldui-color-error: #d03022;
   --boldui-color-error-25: #fef6f6;
-  --boldui-color-success: #007a50;
-  --boldui-color-success-25: #f3fcf8;
+  --boldui-color-success: #0c8c60;
+  --boldui-color-success-25: #f0fcf9;
   --boldui-color-warning: #dba301;
   --boldui-color-warning-25: #fff8f0;
 
